Update Lambda import to improve performance, fix #1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "declaration": true,
     "outDir": "lib",
     "lib": ["esnext", "dom"],
+    "esModuleInterop": true,
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     }
