--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/jakubknejzlik/apollo-gateway-aws-lambda.git"
   },
-  "dependencies": {
+  "devDependencies": {
     "@apollo/gateway": "^0.11.0",
     "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.575.0"
